--- a/djstripe/templates/djstripe/history.html
+++ b/djstripe/templates/djstripe/history.html
@@ -12,6 +12,11 @@
     {% include "djstripe/includes/_history_table.html" %}
   </div>
 </div>
+<div class="row">
+  <div class="col-xs-12">
+    <p style="margin-top:30px; padding-left:15px"><a href="/lessons">Click here to go to the lessons page</a>.</p>
+  </div>
+</div>
 {% endblock content %}
 
 {% block javascript %}
