Add congratulations message to payments history page.

--- a/djstripe/templates/djstripe/history.html
+++ b/djstripe/templates/djstripe/history.html
@@ -14,7 +14,8 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <p style="margin-top:30px; padding-left:15px"><a href="/lessons">Click here to go to the lessons page</a>.</p>
+    <p>Congratulations! You have successfully signed up for Zana Edge. We will be in touch shortly via email to get started.</p>
+    <p><a href="/lessons">Click here to go to the lessons page</a>.</p>
   </div>
 </div>
 {% endblock content %}
