--- a/djstripe/templates/djstripe/account.html
+++ b/djstripe/templates/djstripe/account.html
@@ -55,7 +55,7 @@
 				{% else %}
 				<p>You can <a href="{% url 'djstripe:subscribe' %}">subscribe</a>.</p>
     			{% endif %}
-    			<p>Or consult here your <a href="{% url 'djstripe:history' %}">payment history</a>.</p>
+    			<p>Or consult your <a href="{% url 'djstripe:history' %}">payment history here</a>.</p>
             </div>
         </div>
 
