--- a/djstripe/templates/djstripe/cancel_subscription.html
+++ b/djstripe/templates/djstripe/cancel_subscription.html
@@ -47,8 +47,8 @@
         <h3>Are you sure you want to cancel?</h3>
         <form action="{% url 'djstripe:cancel_subscription' %}" method="post" id="cancel-form">
             {% csrf_token %}
-            <a href="{% url 'djstripe:account' %}" class="btn btn-primary">I change my mind!</a>
-            <button class="btn btn-danger">Cancel my subscription!</button>
+            <a href="{% url 'djstripe:account' %}" class="btn btn-primary">I changed my mind</a>
+            <button class="btn btn-danger">Cancel my subscription</button>
         </form>
         
         {% endif %}
