Remove confusing in-progress.gif and move congratulations message to views.

--- a/djstripe/templates/djstripe/history.html
+++ b/djstripe/templates/djstripe/history.html
@@ -7,14 +7,13 @@
   <div class="col-xs-12">
     <ul class="breadcrumb">
       <li><a href="{% url 'djstripe:account' %}">Home</a></li>
-      <li class="active">Payment History</li>
+      <li>Payment History</li>
     </ul>
     {% include "djstripe/includes/_history_table.html" %}
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <p>Congratulations! You have successfully signed up for Zana Edge. We will be in touch shortly via email to get started.</p>
     <p><a href="/lessons">Click here to go to the lessons page</a>.</p>
   </div>
 </div>
