--- a/djstripe/templates/djstripe/includes/_history_table.html
+++ b/djstripe/templates/djstripe/includes/_history_table.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div id="history-table">
-<h2>Payment History <img class="in-progress-gif" src="{% static 'img/in-progress.gif' %}" /></h2>
+<h2>Payment History</h2>
 <table class="table table-striped">
     <thead>
         <tr>
@@ -30,7 +30,7 @@
     {% empty %}
         <tr>
             <td colspan="3">
-                <img class="in-progress-gif" src="{% static 'img/in-progress.gif' %}" />
+                <p>None yet</p>
             </td>
         </tr>
     {% endfor %}
